tests/ft/regression/462.jk
func id(x: int) -> int { x }

id[int](15); // error
